# py-bootstrap

./: .env.sample  .gitignore  README.md  pyproject.toml  run.sh
helper/: file_utility.py
tests/api/: test_api.py  test_crud_user.py  test_search.py
tests/api/schema/: get_users.json
tests/web/: conftest.py  login_test.py  test_example.py
tests/web/pages/: login_page.py
