[tool.poetry]
name = "py-bootstrap"
version = "0.1.0"
description = "Project Bootstrap for Automated Test"
authors = ["fachrul ch"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^8.3.3"
pytest-html = "^4.1.1"
pytest-playwright = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
